# analisis-mercado-laboral

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
dashboard/: Dashboard.pbix
data/processed/: 1_skills_aggregated.csv  2_seniority_distribution.csv  3_experience_distribution.csv  4_skills_by_country.csv  5_salary_by_country.csv  6_jobs_clean.csv
db/: schema.sql
notebooks/: 01_eda.ipynb
src/extract/: adzuna.py  computrabajo.py
src/load/: loader.py
