[tool.poetry]
name = "analisis-mercado-laboral"
version = "0.1.0"
description = ""
authors = ["JackyDye <augusto.valles321@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
requests = ">=2.34.2,<3.0.0"
beautifulsoup4 = ">=4.14.3,<5.0.0"
python-dotenv = ">=1.2.2,<2.0.0"
sqlalchemy = ">=2.0.50,<3.0.0"
pandas = ">=3.0.3,<4.0.0"
jupyter = ">=1.1.1,<2.0.0"
matplotlib = ">=3.10.9,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
spacy = ">=3.8.14,<4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"